k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hollow-store-vue
spec:
  type: ClusterIP
  selector:
    app: hollow-store-vue
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
