k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hollow-store-vue
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: hollow-store.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hollow-store-vue
                port:
                  number: 80
